add link button in web pages

--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -11,4 +11,5 @@
     {{ form.as_p }}
     <input type="submit" value="Send me instructions!">
   </form>
+  <p><a href="{% url 'login' %}"><button>Back</button></a></p>
 {% endblock %}
