--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,4 +9,9 @@
   {{ form.as_p }}
   <button type="submit">Log In</button>
 </form>
+<p>
+  <a href="{% url 'home' %}"><button>Back</button></a>
+  <a href="{% url 'signup' %}"><button>Sign Up</button></a>
+  <a href="{% url 'password_reset' %}"><button>Reset Password</button></a>
+</p>
 {% endblock %}
