--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -5,4 +5,5 @@
 {% block content %}
 <h1>Password reset complete</h1>
 <p>Your new password has been set. You can log in now on the <a href="{% url 'login' %}">log in page</a>.</p>
+<a href="{% url 'login' %}"><button>Continue</button></a>
 {% endblock %}
