--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -16,6 +16,6 @@
 {% else %}
 
 <p>The password reset link was invalid, possibly because it has already been used.  Please request a new password reset.</p>
-
+<a href="{% url 'home' %}"><button>Home</button></a>
 {% endif %}
 {% endblock %}
