--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -9,4 +9,5 @@
     {{ form.as_p }}
     <button type="submit">Sign Up</button>
   </form>
+  <p><a href="{% url 'login' %}"><button>Back</button></a></p>
 {% endblock %}
