add password to db

--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <h2>Sign up</h2>
-  <form method="post">
+  <form method="post" action="">
     {% csrf_token %}
     {{ form.as_p }}
   <p><input type="button" value="Sign Up" onclick= "location.href = '{% url 'login' %}'"></p>
