--- a/templates/accounts/navbar.html
+++ b/templates/accounts/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <img src="{% static 'images/KU_Logo_PNG.png' %}">
+    <img src="{% static 'images/KU_Logo_PNG.png' %}" width="35px">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
