finish login/logout

--- a/accounts/templates/accounts/home.html
+++ b/accounts/templates/accounts/home.html
@@ -11,7 +11,6 @@
 		<h5>VISITORS:</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="">Create Visitor</a>
 			<table class="table table-sm">
 				<tr>
 					<th></th>
@@ -32,10 +31,9 @@
 	</div>
 
 	<div class="col-md-7">
-		<h5>LAST 5 TICKETS</h5>
+		<h5>TICKETS:</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'create_ticket' %}">Create Ticket</a>
 			<table class="table table-sm">
 				<tr>
                     <th>Events</th>
