--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -1,5 +1,13 @@
 {% load static %}
 
+<style>
+  #hello-msg{
+    font-size: 16px;
+    color: white;
+    margin-right: 20px;
+  }
+</style>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <img src="{% static '/images/logo.png' %}">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
@@ -16,4 +24,8 @@
         </li>
       </ul>
     </div>
+
+    <span id="hello-msg">Hello, {{request.user}}</span>
+    <span><a href="{% url 'logout' %}">Logout</a></span>
+  
   </nav>
