--- a/accounts/templates/accounts/visitors.html
+++ b/accounts/templates/accounts/visitors.html
@@ -10,7 +10,7 @@
 			<h5>Visitor: {{visitors.name}}</h5>
 			<hr>
 			<a class="btn btn-outline-info  btn-sm btn-block" href="">Update Visitor</a>
-			<a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Visitor</a>
+			<a class="btn btn-outline-info  btn-sm btn-block" href=" {% url 'create_ticket' visitors.id %} ">Create Ticket</a>
 
 		</div>
 	</div>
@@ -38,10 +38,12 @@
 <div class="row">
 	<div class="col">
 		<div class="card card-body">
-			<form method="get">
 
-		    <button class="btn btn-primary" type="submit">Search</button>
-		  </form>
+			<form method="get">
+				{{my_filter.form}}
+		    	<button class="btn btn-primary" type="submit">Search</button>
+			</form>
+
 		</div>
 	</div>
 	
