--- a/accounts/templates/accounts/status.html
+++ b/accounts/templates/accounts/status.html
@@ -5,38 +5,13 @@
 		<div class="col-md">
 			<div class="card text-center text-white  mb-3" id="total-orders">
 			  	<div class="card-header">
-			  		<h5 class="card-title">Total Tickets</h5>
+			  		<h5 class="card-title">Total Events</h5>
 			  	</div>
 			  	<div class="card-body">
-			    	<h3 class="card-title">{{total_tickets}}</h3>
+			    	<h3 class="card-title">{{total_events}}</h3>
 			  	</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="col">
-		<div class="col-md">
-			<div class="card text-center text-white  mb-3" id="orders-delivered">
-			  	<div class="card-header">
-			  		<h5 class="card-title">Available Events Tickets</h5>
-			  	</div>
-			  	<div class="card-body">
-			    	<h3 class="card-title">{{available_count}}</h3>
-			  	</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="col">
-		<div class="col-md">
-			<div class="card text-center text-white  mb-3" id="orders-pending">
-			  	<div class="card-header">
-			  		<h5 class="card-title">Reserved Events Tickets</h5>
-			  	</div>
-			  	<div class="card-body">
-			    	<h3 class="card-title">{{reserved_count}}</h3>
-			  	</div>
-			</div>
-		</div>
-	</div>
 </div>
