--- a/accounts/templates/accounts/delete.html
+++ b/accounts/templates/accounts/delete.html
@@ -8,7 +8,7 @@
 		<div class="card card-body">
 
             <p>Are you sure you want to delete "{{item}}"?</p>
-            <form action="{% url 'delete_ticket' item.id %}" method="POST">
+            <form action="" method="POST">
                 {% csrf_token %}
                 <a class="btn btn-sm btn-warning" href="{% url 'home' %}">Cancel</a>
                 <input class="btn btn-sm btn-danger" type="submit" name="Confirm">
