--- a/accounts/templates/accounts/events.html
+++ b/accounts/templates/accounts/events.html
@@ -14,14 +14,14 @@
                         <tr>
                             <th>Events</th>
                             <th>Description</th>
-                            <th>Location</th>
+                            <th>Status</th>
                         </tr>
 
                         {% for i in events %}
                             <tr>
-                                <td>{{i.name}}</td>
-                                <td>{{i.description}}</td>
-                                <td>{{i.location}}</td>
+                                <td>{{i.event_name}}</td>
+                                <td>{{i.event_description}}</td>
+                                <td>{{i.event_status}}</td>
                             </tr>
                         {% endfor %}
                     </table>
