--- a/accounts/templates/accounts/visitors.html
+++ b/accounts/templates/accounts/visitors.html
@@ -7,10 +7,10 @@
 <div class="row">
 	<div class="col-md">
 		<div class="card card-body">
-			<h5>Visitor: {{visitors.name}}</h5>
+			<h5>Visitor: {{visitors.visitor_name}}</h5>
 			<hr>
 			<a class="btn btn-outline-info  btn-sm btn-block" href="">Update Visitor</a>
-			<a class="btn btn-outline-info  btn-sm btn-block" href=" {% url 'create_ticket' visitors.id %} ">Create Ticket</a>
+			<a class="btn btn-outline-info  btn-sm btn-block" href=" {% url 'create_event' visitors.id %} ">Create Event</a>
 
 		</div>
 	</div>
@@ -19,8 +19,8 @@
 		<div class="card card-body">
 			<h5>Contact Information</h5>
 			<hr>
-			<p>Email: {{visitors.email}}</p>
-			<p>Phone: {{visitors.phone}}</p>
+			<p>Email: {{visitors.visitor_email}}</p>
+			<p>Phone: {{visitors.visitor_phone}}</p>
 		</div>
 	</div>
 
@@ -28,7 +28,7 @@
 		<div class="card card-body">
 			<h5>Total Events</h5>
 			<hr>
-			<h1 style="text-align: center;padding: 10px">{{tickets_count}}</h1>
+			<h1 style="text-align: center;padding: 10px">{{events_count}}</h1>
 		</div>
 	</div>
 </div>
@@ -56,22 +56,20 @@
 			<table class="table table-sm">
 				<tr>
 					<th>Event</th>
+					<th>Event ID</th>
 					<th>Description</th>
-					<th>Location</th>
-					<th>Status</th>
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
 
-				{% for ticket in tickets %}
+				{% for event in events %}
 
 				<tr>
-					<td>{{ticket.event}}</td>
-					<td>{{ticket.event.description}}</td>
-					<td>{{ticket.event.location}}</td>
-					<td>{{ticket.status}}</td>
-					<td><a class="btn btn-sm btn-info" href="{% url 'update_ticket' ticket.id %}">Update</a></td>
-					<td><a class="btn btn-sm btn-danger"href="{% url 'delete_ticket' ticket.id %}">Delete</a></td>
+					<td>{{event.event_name}}</td>
+					<td>{{event.id}}</td>
+					<td>{{event.event_description}}</td>
+					<td><a class="btn btn-sm btn-info" href="{% url 'edit_event' event.id %}">Edit</a></td>
+					<td><a class="btn btn-sm btn-danger"href="{% url 'delete_event' event.id %}">Delete</a></td>
 				</tr>
 				{% endfor %}
 
