Some working pages in eve holders

--- a/templates/accounts/event.html
+++ b/templates/accounts/event.html
@@ -18,15 +18,7 @@
                     {% for i in events %}
                         <tr>
                             <td>{{ i.event_name }}</td>
-                        </tr>
-                    {% endfor %}
-                    {% for i in events %}
-                        <tr>
-                            <td>{{ i.event_pub_date }}</td>
-                        </tr>
-                    {% endfor %}
-                    {% for i in events %}
-                        <tr>
+                            <td>{{ i.pub_date }}</td>
                             <td>{{ i.event_host }}</td>
                         </tr>
                     {% endfor %}
