--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -6,41 +6,37 @@
 
     <br>
 
-    <div class="row">
-        <div class="col-md-5">
-            <h5>VISITORS:</h5>
-            <hr>
-            <div class="card card-body">
-                <a class="btn btn-primary btn-sm btn-block" href="">Create Visitor</a>
-                <table class="table table-sm">
-                    <tr>
-                        <th></th>
-                        <th>Visitor</th>
-                        <th>Event List</th>
-                    </tr>
+{#    <div class="row">#}
 
-                </table>
-            </div>
-        </div>
-
-        <div class="col-md-7">
+        <div class="col-md-10">
             <h5>LAST 5 EVENTS</h5>
             <hr>
             <div class="card card-body">
                 <a class="btn btn-primary btn-sm btn-block" href="">Create Events</a>
-                <table class="table table-sm">
+                <table class="table table-sm" id="recent-event-table">
+
                     <tr>
                         <th>Event</th>
-                        <th>Date Published</th>
+                        <th>Description</th>
                         <th>Status</th>
-                        <th>Update</th>
-                        <th>Cancel</th>
+                        <th>Edit</th>
+                        <th>Remove</th>
                     </tr>
+
+                    {% for event in events %}
+                        <tr>
+                            <td>{{ event.event_name }}</td>
+                            <td>{{ event.event_description }}</td>
+                            <td>{{ event.can_register }} </td>
+                            <td><a class="btn btn-sm btn-info" href="">Edit</a></td>
+                            <td><a class="btn btn-sm btn-danger" href="">Delete</a></td>
+                        </tr>
+                    {% endfor %}
 
                 </table>
             </div>
         </div>
 
-    </div>
+{#    </div>#}
 
 {% endblock %}
