--- a/templates/accounts/status.html
+++ b/templates/accounts/status.html
@@ -8,7 +8,7 @@
                     <h5 class="card-title">Total Events</h5>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title"></h3>
+                    <h3 class="card-title">{{ total_events }}</h3>
                 </div>
             </div>
         </div>
@@ -21,7 +21,7 @@
                     <h5 class="card-title">Events Registered</h5>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title"></h3>
+                    <h3 class="card-title">damn it!!!!</h3>
                 </div>
             </div>
         </div>
@@ -34,7 +34,7 @@
                     <h5 class="card-title">History Events</h5>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title"></h3>
+                    <h3 class="card-title">To be added</h3>
                 </div>
             </div>
         </div>
