change file name and add app_name in urls.py

--- a/templates/eve_holder/dashboard.html
+++ b/templates/eve_holder/dashboard.html
@@ -1,8 +1,8 @@
-{% extends 'accounts/main.html' %}
+{% extends 'eve_holder/main.html' %}
 
 {% block content %}
 
-    {% include 'accounts/status.html' %}
+    {% include 'eve_holder/status.html' %}
 
     <br>
 
