--- a/templates/eve_holder/navbar.html
+++ b/templates/eve_holder/navbar.html
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'home' %}">Dashboard</a>
+                <a class="nav-link" href="{% url 'eve_holder:home' %}">Dashboard</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'events' %}">Event</a>
+                <a class="nav-link" href="{% url 'eve_holder:events' %}">Event</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
