--- a/templates/eve_holder/visitor.html
+++ b/templates/eve_holder/visitor.html
@@ -1,7 +1,9 @@
 {% extends 'eve_holder/main.html' %}
+
 {% block content %}
 
     <br>
+
     <div class="row">
         <div class="col-md">
             <div class="card card-body">
@@ -62,8 +64,11 @@
                             <td>{{ event.event_name }}</td>
                             <td>{{ event.event_description }}</td>
                             <td>{{ event.can_register }}</td>
-                            <td><a class="btn btn-sm btn-info" href="">Edit</a></td>
-                            <td><a class="btn btn-sm btn-danger" href="">Remove</a></td>
+                            <td><a class="btn btn-sm btn-info"
+                                   href="{% url 'eve_holder:edit_event' event.id %}">Edit</a></td>
+                            <td><a class="btn btn-sm btn-danger"
+                                   href="{% url 'eve_holder:delete_event' event.id %}">Remove</a>
+                            </td>
                         </tr>
                     {% endfor %}
 
