--- a/templates/eve_holder/login.html
+++ b/templates/eve_holder/login.html
@@ -127,7 +127,7 @@
 
             <div class="mt-4">
                 <div class="d-flex justify-content-center links">
-                    Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
+                    Don't have an account? <a href="{% url 'eve_holder:register' %}" class="ml-2">Sign Up</a>
                 </div>
 
             </div>
