--- a/templates/eve_holder/navbar.html
+++ b/templates/eve_holder/navbar.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'eve_holder:home' %}">Dashboard</a>
+                <a class="nav-link" href="{% url 'eve_holder:dashboard' %}">Dashboard</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'eve_holder:events' %}">Event</a>
@@ -22,6 +22,6 @@
     </div>
 
     <span id="hello-msg">Hello, {{ request.user }}</span>
-    <span><a href="{% url 'logout' %}">Logout</a></span>
+    <span><a href="{% url 'eve_holder:logout' %}">Logout</a></span>
 
 </nav>
