--- a/templates/eve_holder/visitor.html
+++ b/templates/eve_holder/visitor.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md">
             <div class="card card-body">
-                <h5>Customer:</h5>
+                <h5>Visitor: {{ visitors.visitor_name }}</h5>
                 <hr>
                 <a class="btn btn-outline-info  btn-sm btn-block" href="">Update Visitor</a>
                 <a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Visitor</a>
