--- a/templates/eve_holder/visitor.html
+++ b/templates/eve_holder/visitor.html
@@ -28,28 +28,16 @@
             <div class="card card-body">
                 <h5>Total Events</h5>
                 <hr>
-                <h1 style="text-align: center;padding: 10px">{{ event_count }}</h1>
+                <h1 style="text-align: center;padding: 10px">{{ events_count }}</h1>
             </div>
         </div>
-    </div>
-
-    <br>
-    <div class="row">
-        <div class="col">
-            <div class="card card-body">
-                <form method="get">
-
-                    <button class="btn btn-primary" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-
     </div>
 
     <br>
     <div class="row">
         <div class="col-md">
             <div class="card card-body">
+                <h5>Participated Events</h5>
                 <table class="table table-sm">
                     <tr>
                         <th>Event</th>
