--- a/templates/eve_holder/dashboard.html
+++ b/templates/eve_holder/dashboard.html
@@ -19,6 +19,7 @@
                         <th>Event</th>
                         <th>Description</th>
                         <th>Status</th>
+                        <th>Details</th>
                         <th>Edit</th>
                         <th>Remove</th>
                     </tr>
@@ -28,9 +29,12 @@
                             <td>{{ event.event_name }}</td>
                             <td>{{ event.event_description }}</td>
                             <td>{{ event.can_register }} </td>
+                            <td><a class="btn btn-sm btn-primary"
+                                   href="{% url 'eve_holder:event_detail' event.id %}">View</a></td>
                             <td><a class="btn btn-sm btn-info"
                                    href="{% url 'eve_holder:edit_event' event.id %}">Edit</a></td>
-                            <td><a class="btn btn-sm btn-danger" href="{% url 'eve_holder:delete_event' event.id %}">Delete</a>
+                            <td><a class="btn btn-sm btn-danger" 
+                                   href="{% url 'eve_holder:delete_event' event.id %}">Delete</a>
                             </td>
                         </tr>
                     {% endfor %}
