fix the front end and bug

--- a/templates/eve_holder/homepage.html
+++ b/templates/eve_holder/homepage.html
@@ -21,7 +21,7 @@
 
         <div class="right-side">
             <div class="nav-link-wrapper">
-                <a href="{% url 'eve_holder:login' %}">login</a>
+                <a href="{% url 'eve_holder:dashboard' %}">Go to our website</a>
             </div>
         </div>
     </div>
@@ -99,7 +99,7 @@
             </div>
             <div class="login-button-bottom">
                 <div class="login-button">
-                    <a href="{% url 'eve_holder:login' %}" type="button" class="btn btn-outline-warning">login</a>
+                    <a href="{% url 'eve_holder:dashboard' %}" type="button" class="btn btn-outline-warning">Go to our website</a>
                 </div>
             </div>
         </div>
