add privacy to visitor

--- a/templates/eve_holder/event_detail.html
+++ b/templates/eve_holder/event_detail.html
@@ -16,7 +16,7 @@
                                 </div>
                             <div class="userData ml-3">
                                 <h2 class="d-block" style="font-size: 1.5rem; font-weight: bold">{{ event.event_name }}</a></h2>
-                                <h6 class="d-block">Host by: <a href="javascript:void(0)">{{ event.event_host }}</a></h6>
+                                <h6 class="d-block">Host by: <a href="">{{ event.event_host.first.name }}</a></h6>
                             </div>
                             <div class="ml-auto">
                                 <input type="button" class="btn btn-primary d-none" id="btnDiscard" value="Discard Changes" />
