--- a/templates/eve_holder/host.html
+++ b/templates/eve_holder/host.html
@@ -7,10 +7,10 @@
     <div class="row">
         <div class="col-md">
             <div class="card card-body">
-                <h5>Visitor: {{ visitors.name }}</h5>
+                <h5>Host: {{ host.name }}</h5>
                 <hr>
-                <a class="btn btn-outline-info  btn-sm btn-block" href="">Update Account</a>
-                <a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Account</a>
+                <a class="btn btn-outline-info  btn-sm btn-block" href="">Update Host</a>
+                <a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Host</a>
 
             </div>
         </div>
@@ -19,8 +19,8 @@
             <div class="card card-body">
                 <h5>Contact Information</h5>
                 <hr>
-                <p>Email: {{ visitors.email }}</p>
-                <p>Phone: {{ visitors.phone_num }}</p>
+                <p>Email: {{ host.email }}</p>
+                <p>Phone: {{ host.phone_num }}</p>
             </div>
         </div>
 
