--- a/templates/eve_holder/register.html
+++ b/templates/eve_holder/register.html
@@ -38,6 +38,24 @@
                     </div>
                     <div class="input-group mb-2">
                         <div class="input-group-append">
+                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        </div>
+                        {{ form.first_name }}
+                    </div>
+                    <div class="input-group mb-2">
+                        <div class="input-group-append">
+                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        </div>
+                        {{ form.last_name }}
+                    </div>
+                    <div class="input-group mb-2">
+                        <div class="input-group-append">
+                            <span class="input-group-text"><i class="fas fa-users"></i></span>
+                        </div>
+                        {{ form.groups }}
+                    </div>
+                    <div class="input-group mb-2">
+                        <div class="input-group-append">
                             <span class="input-group-text"><i class="fas fa-key"></i></span>
                         </div>
                         {{ form.password1 }}
@@ -76,8 +94,10 @@
     let form_fields = document.getElementsByTagName('input');
     form_fields[1].placeholder = 'Username..';
     form_fields[2].placeholder = 'Email..';
-    form_fields[3].placeholder = 'Enter password...';
-    form_fields[4].placeholder = 'Re-enter Password...';
+    form_fields[3].placeholder = 'First Name...';
+    form_fields[4].placeholder = 'Last Name...';
+    form_fields[5].placeholder = 'Enter password...';
+    form_fields[6].placeholder = 'Re-enter Password...';
 
 
     for (let field in form_fields) {
