commit for test files and frontend

--- a/templates/eve_holder/homepage.html
+++ b/templates/eve_holder/homepage.html
@@ -56,7 +56,7 @@
             <div class="item-wrapper">
                 <div class="img-deco">
                     <div class="pic1-container">
-                        <img src="{% static 'eve_holder/../../static/images/pic1.jpg' %}">
+                        <img src="{% static 'eve_holder/../../static/images/pic1.jpg' %}" alt="Create Event Pic">
                     </div>
                 </div>
                 <div class="img-text-wrapper">
@@ -79,7 +79,7 @@
             <div class="item-wrapper">
                 <div class="img-deco">
                     <div class="pic2-container">
-                        <img src="{% static 'eve_holder/../../static/images/pic2.jpg' %}">
+                        <img src="{% static 'eve_holder/../../static/images/pic2.jpg' %}" alt="Join Event Pic">
                     </div>
                 </div>
                 <div class="img-text-wrapper">
