add function cancel event to the app

--- a/templates/eve_holder/events.html
+++ b/templates/eve_holder/events.html
@@ -14,7 +14,7 @@
                     <tr>
                         <th>Events</th>
                         <th>Description</th>
-                        <th>Status</th>
+                        <th>Expired</th>
                         <th>Views</th>
                     </tr>
 
@@ -25,6 +25,37 @@
                             <td>{{ event.is_expired }}</td>
                             <td><a class="btn btn-sm btn-primary"
                                 href="{% url 'eve_holder:event_detail' event.id %}">View</a></td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md">
+            <div class="card card-body">
+                <h5>Registered Events</h5>
+            </div>
+            <div class="card card-body">
+                <table class="table">
+                    <tr>
+                        <th>Events</th>
+                        <th>Description</th>
+                        <th>Expired</th>
+                        <th>Views</th>
+                        <th>Cancel</th>
+                    </tr>
+
+                    {% for event in events %}
+                        <tr>
+                            <td>{{ event.event_name }}</td>
+                            <td>{{ event.event_description }}</td>
+                            <td>{{ event.is_expired }}</td>
+                            <td><a class="btn btn-sm btn-primary"
+                                href="{% url 'eve_holder:event_detail' event.id %}">View</a></td>
+                            <td><a class="btn btn-warning"
+                                href="{% url 'eve_holder:event_cancel' event.id %}">Cancel This Event</a></td>
+
                         </tr>
                     {% endfor %}
                 </table>
