--- a/templates/eve_holder/visitors_list.html
+++ b/templates/eve_holder/visitors_list.html
@@ -21,7 +21,7 @@
                 <table class="table">
                     <tr>
                         <th>Name</th>
-                        <th>Emial</th>
+                        <th>Email</th>
                         <th>PhoneNumber</th>
                         <th>Views</th>
                     </tr>
