--- a/templates/eve_holder/event_detail.html
+++ b/templates/eve_holder/event_detail.html
@@ -15,7 +15,7 @@
                                 <div class="middle">
                                 </div>
                             <div class="userData ml-3">
-                                <h2 class="d-block" style="font-size: 1.5rem; font-weight: bold">{{ event.event_name }}</a></h2>
+                                <h2 class="d-block" style="font-size: 1.5rem; font-weight: bold">{{ event.event_name }}</h2>
                                 <h6 class="d-block">Host by: <a href="javascript:void(0)">{{ event.event_host }}</a></h6>
                             </div>
                             <div class="ml-auto">
@@ -86,7 +86,7 @@
 
                                     <div class="row">
                                         <div class="col-sm-3 col-md-2 col-5">
-                                            <a class="btn btn-sm btn-info" href="{% url 'eve_holder:event_register' event.id %}">Join Now</a>
+                                            <a class="btn btn-sm btn-info" href="{% url 'eve_holder:event_register' %}">Join Now</a>
                                         </div>
                                         <div>
                                             <a class="btn btn-sm btn-secondary" 
