--- a/templates/eve_holder/host.html
+++ b/templates/eve_holder/host.html
@@ -44,6 +44,7 @@
                         <th>Description</th>
                         <th>Status</th>
                         <th>Edit</th>
+                        <th>Visitors</th>
                         <th>Remove</th>
                     </tr>
 
@@ -54,6 +55,8 @@
                             <td>{{ event.can_register }}</td>
                             <td><a class="btn btn-sm btn-info"
                                    href="{% url 'eve_holder:edit_event' event.id %}">Edit</a></td>
+                            <td><a class="btn btn-sm btn-info"
+                                   href="{% url 'eve_holder:visitors_list' event.id %}">View</a></td>
                             <td><a class="btn btn-sm btn-danger"
                                    href="{% url 'eve_holder:delete_event' event.id %}">Remove</a>
                             </td>
