--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Piazzolla&display=swap');
+
 body {
     margin: 0;
 }
@@ -88,6 +93,7 @@ body {
 img {
     max-width: 100%;
     max-height: 100%;
+    display: block;
 }
 
 .img-deco {
