--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Piazzolla&display=swap');
-
+#eve_logo {
+    max-width: 100%;
+    height: auto;
+}
 
 body {
     background-color: #ebeff5;
