--- a/templates/eve_holder/navbar.html
+++ b/templates/eve_holder/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <img id="eve_logo" height="42px" class="imgs" src="{% static '/images/logo_transparent.png' %}" alt="EveHolder Logo">
+    <img id="eve_logo" class="img-fluid" src="{% static '/images/logo_transparent.png' %}" alt="EveHolder Logo">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
