--- a/templates/eve_holder/visitors_list.html
+++ b/templates/eve_holder/visitors_list.html
@@ -23,17 +23,13 @@
                         <th>Name</th>
                         <th>Email</th>
                         <th>PhoneNumber</th>
-{#                        <th>Views</th>#}
                     </tr>
 
                     {% for visitor in visitors %}
                         <tr>
                             <td>{{ visitor.name }}</td>
                             <td>{{ visitor.email }}</td>
-                            <td>{{ visitor.visitor.phone }}</td>
-{#                            <td>#}
-{#                                <a class="btn btn-sm btn-info" href="{% url 'eve_holder:informations' visitor.id %}">Views</a>#}
-{#                            </td>#}
+                            <td>{{ visitor.phone_num }}</td>
                         </tr>
                     {% endfor %}
 
