change method for accessing to request user

--- a/templates/eve_holder/events.html
+++ b/templates/eve_holder/events.html
@@ -46,7 +46,7 @@
                         <th>Cancel</th>
                     </tr>
 
-                    {% for event in events %}
+                    {% for event in visitor_events %}
                         <tr>
                             <td>{{ event.event_name }}</td>
                             <td>{{ event.event_description }}</td>
