--- a/templates/eve_holder/event_detail.html
+++ b/templates/eve_holder/event_detail.html
@@ -94,7 +94,7 @@
                                                 <div class="row">
                                                     <div class="col-sm-3 col-md-2 col-5">
                                                         <a class="btn btn-sm btn-info"
-                                                           href="{% url 'eve_holder:event_register' %}">Join
+                                                           href="{% url 'eve_holder:event_register' event.id %}">Join
                                                             Now</a>
                                                     </div>
                                                     <div>
